# layout-types

./: Cargo.toml  profile.json
crates/layout/: Cargo.toml
crates/layout/src/: lib.rs  math.rs  output.rs
crates/playground/: Trunk.toml  index.html  styles.scss
lean/: Layout.lean  lake-manifest.json  lakefile.lean
lean-old/: LayoutTypes.lean  lakefile.lean
lean-old/LayoutTypes/: Document.lean  DocumentProofs.lean  Layout.lean  LayoutProofs.lean  Space.lean  SpaceProofs.lean  TypeProofs.lean  Utils.lean  UtilsProofs.lean
lean/Layout/: Element.lean  Layout.lean  Space.lean
proofs/: LayoutTypes.lean  Main.lean  Proofs.lean  lake-manifest.json  lakefile.lean
proofs/LayoutTypes/: Data.lean  Document.lean  DocumentProofs.lean  Expr.lean  Layout.lean  LayoutProofs.lean  Space.lean  SpaceProofs.lean  TypeProofs.lean  Types.lean  Utils.lean  UtilsProofs.lean
proofs/Proofs/: Basic.lean
rust/crates/layout/src/: input.rs  layout.rs  shaper.rs  wrapper.rs
rust/crates/playground/: Cargo.toml
rust/crates/playground/src/: main.rs
src/: canvas.rs  finder.rs  main.rs  rasterizer.rs  shaper.rs  wrapper.rs
