[package]
name = "layout-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allsorts = "0.14.1"
anyhow = "1.0.79"
bytemuck = "1.14.2"
font-kit = "0.12.0"
gl = "0.14.0"
glutin = "0.31.3"
hyphenation = "0.8.4"
ndarray = "0.15.6"
pathfinder = "0.6.5"
softbuffer = "0.4.1"
textwrap = { version = "0.16.0", features = ["hyphenation"] }
winit = "0.29.10"

[profile.release]
debug = 1
