[package]
name = "layout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allsorts = { version = "0.14.1", default-features = false, features = ["flate2_rust", "outline"] }
anyhow = "1.0.79"
hyphenation = "0.8.4"
itertools = "0.12.1"
nalgebra = "0.32.3"
textwrap = { version = "0.16.0", features = ["hyphenation"] }
